PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 200?, PHP 5.1.2
- Added new extensions: (Ilia, Wez)
  . XMLWriter
  . Hash
- Added reflection constants as class constants. (Johannes)
- Added --enable-gcov configure option to enable C-level code coverage.
  (John, Jani)
- Added missing support for 'B' format identifier to date() function. (Ilia)
- Changed reflection to be an extension. (Marcus)
- Improved SPL: (Marcus)
  . Added class SplFileInfo as root class for DirectoryIterator and 
    SplFileObject
- Improved SimpleXML extension: (Marcus)
  . Fixed memleaks
  . Fixed var_dump()
  . Fixed isset/empty/(bool) behavior
  . Fixed iterator edge cases
  . Added methods getNamespaces(), getDocNamespaces()
- Prevent header injection by limiting each header to a single line. (Ilia)
- Fixed possible XSS inside error reporting functionality. (Ilia)
- Fixed many bugs in OCI8. (Tony)
- Fixed crash and leak in mysqli when using 4.1.x client libraries and
  connecting to 5.x server. (Andrey)
- Fixed bug #35594 (Multiple calls to getopt() may result in a crash).
  (rabbitt at gmail dot com, Ilia)
- Fixed bug #35558 (mktime() interpreting 3 digit years incorrectly). (Ilia)
- Fixed bug #35543 (php crash when calling non existing method of a class
  that extends PDO). (Tony)
- Fixed bug #35539 (typo in error message for ErrorException). (Tony)
- FIxed bug #35536 (mysql_field_type() doesn't handle NEWDECIMAL). (Tony)
- Fixed bug #35509 (string constant as array key has different behavior inside
  object). (Dmitry)
- Fixed bug #35508 (PDO fails when unknown fetch mode specified). (Tony)
- Fixed bug #35499 (strtotime() does not handle whitespace around the date 
  string). (Ilia)
- Fixed bug #35496 (Crash in mcrypt_generic()/mdecrypt_generic() without 
  proper init). (Ilia)
- Fixed bug #35490 (socket_sendto() unable to handle IPv6 addresses). (Tony)