@@ -1,6 +1,7 @@
 PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 200?, PHP 5.1.2
+- Addes PNG compression support (Pierre)
 - Added new extensions: (Ilia, Wez)
   . XMLWriter
   . Hash
